# AutoInputCPP

./: CMakeLists.txt  CMakeSettings.json  Final Documentation.docx  README.md  dispatch.cpp  frames.h  model.cpp  model.h  testing.cpp  testing.h  train.cpp  train.h
